...
                padding: const EdgeInsets.symmetric(
                  vertical: AppSpacing.modernValue,
                ),
                shape: RoundedRectangleBorder(borderRadius: AppRadius.medium),
              ),
              child: const Text(
                'キャンセル',
                style: TextStyle(fontWeight: AppFontWeight.bold),
              ),
            ),
          ),
          const SizedBox(width: AppSpacing.md),
          Expanded(
...
